[package]
name = "rdap-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
icann-rdap-client = "0.0.19"
icann-rdap-common = "0.0.19"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
warp = "0.3.7"
